tests/NormalTests/paczka1/small_fuzzy/74744445.err
Error in line 10: plEyfuJouV7 A669 6,1
Error in line 11: plEyfuJouV7 S281 96,4
